Missed Call Modal/style.css
html {
    box-sizing: border-box;
}

*,
*:before,
*:after {
    box-sizing: inherit;
}

body {
    font-family: 'Muli', sans-serif;
    margin: 0;
    background: #ECEEF7;
}

a {
    text-decoration: none;
    color: inherit;
}

.main-container {
    display: grid;
    place-items: center;
    height: 85vh;
}

.modal-container {
    background: #fff;
    border-radius: 9px;
    box-shadow: #A6B0DC 0 9px 58px -14px;
    width: 90%;
    max-width: 500px;
    margin: 0 auto;
    padding: 20px 25px 70px;
}

.top-icons_cont {
    display: grid;
    grid-template-columns: auto 1fr;
    justify-items: end;
    align-items: center;
}

.round-wrapper:hover {
    font-size: 1.6rem;
    padding: 7.5px 11px;
    color: #d23c3c;
}

.missed-icon {
    display: inline-block;
    width: 1.6rem;
    height: auto;
    margin: 0 10px 0 10px;
}

.round-wrapper {
    padding: 8px 12px;
    border: 1px solid #CFD1D7;
    color: #CFD1D7;
    font-size: 1.5rem;
    border-radius: 100vh;
    -webkit-text-stroke: 1.5px #fff;
}

.modal-content {
    display: grid;
    grid-template-columns: auto 1fr;
    width: 80%;
    margin: 0 auto 25px;
    padding: 30px 0;
    gap: 30px;
}


.image-wrapper {
    width: 6rem;
    height: 6rem;
    border-radius: 100vh;
    background: #ECEEF7;
    display: grid;
    place-items: center;

}

.caller-image {
    width: 5rem;
    height: auto;
}

.text-container {
    color: #20273D;
    display: grid;
    align-content: center;

}

.info-text {
    margin: 20px 0 0;
}

.info-text,
.call-time {
    font-weight: 600;
}

.caller-name {
    font-weight: 900;
    font-size: 1.13rem;
    margin: 4px 0 10px;
}

.call-time {
    font-size: .8rem;
    margin: 0;
}

.btn-container {
    display: flex;
    justify-content: space-between;
    width: 80%;
    margin: auto;
}

.btn {
    border-radius: 4px;
    display: flex;
    align-items: center;
    font-size: .8rem;
    font-weight: 600;
    padding: .9em 1.6em;
    text-align: center;
    white-space: nowrap;
}

.btn-send {
    border: 1px solid #CFD1D7;
    color: #72747C;
}

.btn-send:hover {
    background: #ECEEF7;
}

.btn-call {
    background: #1BA371;
    box-shadow: #0E9688 0 9px 16px -5px;
    color: #fff;
    padding: .9em 3em;
}

.btn-call:hover {
    opacity: 0.8;
}

.btn i {
    margin-right: 10px;
    font-size: 1rem;
}

/* Media Query */

@media (max-width: 507px) {
    .modal-container {
        padding: 10px 18px 70px;
    }

    .missed-icon {
        display: inline-block;
        width: 1.4rem;
    }

    .round-wrapper {
        padding: 4px 8px;
    }

    .round-wrapper:hover {
        padding: 3.5px 7.4px;
    }

    .modal-content {
        width: 90%;
    }

    .btn {
        padding: .8em .9em;
    }

    .btn-call {
        padding: 0em 2.2em;
    }
}

@media (max-width: 432px) {
    .btn-container {
        width: 95%;
    }

    .btn {
        padding: .8em .5em;
    }

    .btn-call {
        padding: 0em 1.8em;
    }
}

@media (max-width: 330px) {

    .btn {
        padding: .8em .3em;
    }

    .btn-call {
        padding: 0em 1.4em;
    }

    .btn i {
        margin-right: 5px;
        font-size: 1rem;
    }
}

